[package]
name = "geo302"
version = "0.1.2"
edition = "2021"
description = "A simple geoIP-based redirect proxy"
readme = "README.md"
license = "MIT"
repository = "https://github.com/hombit/geo302"
keywords = ["geoIP", "http-proxy"]
categories = ["web-programming::http-server"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1"
http-serde = {version = "1.1"}
hyper = { version = "0.14", features = ["client", "http1", "http2", "server"] }  # http2 can be used by client
hyper-tls = "0.5"
log = { version = "0.4", features = ["std", "serde"] }
maxminddb = { version = "0.23", default_features = false, features = ["unsafe-str-decode"] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = { version = "2.3", default-features = false }
smallvec = { version = "1.9", default_features = false, features = ["union"]}
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.5"
