[package]
name = "geo302"
version = "0.1.4"
edition = "2021"
rust-version = "1.59"
description = "A simple geoIP-based redirect proxy"
readme = "README.md"
license = "MIT"
repository = "https://github.com/hombit/geo302"
keywords = ["geoIP", "http-proxy"]
categories = ["web-programming::http-server"]

[profile.release]
codegen-units = 1
lto = true
strip = true

[features]
maxminddb = ["dep:maxminddb"]
full = ["maxminddb"]
default = ["maxminddb"]

[dependencies]
anyhow = "1"
enum_dispatch = "0.3"
http-serde = {version = "1.1"}
# http2 client wouldn't work until this is fixed:
# https://github.com/hyperium/hyper-tls/pull/85
# And we don't really need http2 server
hyper = { version = "0.14", features = ["client", "http1", "server"] }
hyper-tls = "0.5"
log = { version = "0.4", features = ["std", "serde"] }
maxminddb = { version = "0.23", default_features = false, features = ["unsafe-str-decode"], optional = true }
serde = { version = "1.0", features = ["derive"] }
simple_logger = { version = "4.0", default-features = false }
smallvec = { version = "1.9", default_features = false, features = ["union"]}
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
toml = "0.5"
